client: Add directive 'bkvn-header'
Via 'yo angular-fullstack:directive bkvn-header'

Updated to fix JSHint errors & restrict to 'E'.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -26,5 +26,6 @@
 
 // Component styles are injected through grunt
 // injector
+@import 'bkvn-header/bkvn-header.styl';
 @import 'main/main.styl';
 // endinjector
