client: Add directive 'bkvn-footer'
Via 'yo angular-fullstack:directive bkvn-footer'

Updated to fix JSHint errors & restrict to 'E'.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -26,6 +26,7 @@
 
 // Component styles are injected through grunt
 // injector
+@import 'bkvn-footer/bkvn-footer.styl';
 @import 'bkvn-header/bkvn-header.styl';
 @import 'main/main.styl';
 // endinjector
