client: Add directive 'bkvn-subject'
Via 'yo angular-fullstack:directive bkvn-subject'

Updated to fix JSHint errors & restrict to 'E'.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -28,5 +28,6 @@
 // injector
 @import 'bkvn-footer/bkvn-footer.styl';
 @import 'bkvn-header/bkvn-header.styl';
+@import 'bkvn-subject/bkvn-subject.styl';
 @import 'main/main.styl';
 // endinjector
