--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -26,6 +26,7 @@
 
 // Component styles are injected through grunt
 // injector
+@import 'bkvn-book/bkvn-book.styl';
 @import 'bkvn-footer/bkvn-footer.styl';
 @import 'bkvn-header/bkvn-header.styl';
 @import 'bkvn-subject/bkvn-subject.styl';
