client: Add directive 'bkvn-chapter'
Represents a chapter in the UI.

Via 'yo angular-fullstack:directive bkvn-chapter'

Updated to fix JSHint errors & restrict to 'E'.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -27,6 +27,7 @@
 // Component styles are injected through grunt
 // injector
 @import 'bkvn-book/bkvn-book.styl';
+@import 'bkvn-chapter/bkvn-chapter.styl';
 @import 'bkvn-footer/bkvn-footer.styl';
 @import 'bkvn-header/bkvn-header.styl';
 @import 'bkvn-subject/bkvn-subject.styl';
