--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -30,6 +30,7 @@
 @import 'bkvn-chapter/bkvn-chapter.styl';
 @import 'bkvn-footer/bkvn-footer.styl';
 @import 'bkvn-header/bkvn-header.styl';
+@import 'bkvn-image/bkvn-image.styl';
 @import 'bkvn-page/bkvn-page.styl';
 @import 'bkvn-subject/bkvn-subject.styl';
 @import 'main/main.styl';
