client: Add directive 'bkvn-video'
Represents a video in the UI.

Via 'yo angular-fullstack:directive bkvn-video'

Updated to fix JSHint errors & restrict to 'E'.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -33,5 +33,6 @@
 @import 'bkvn-image/bkvn-image.styl';
 @import 'bkvn-page/bkvn-page.styl';
 @import 'bkvn-subject/bkvn-subject.styl';
+@import 'bkvn-video/bkvn-video.styl';
 @import 'main/main.styl';
 // endinjector
