client: Add route 'subject'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -35,4 +35,5 @@
 @import 'bkvn-subject/bkvn-subject.styl';
 @import 'bkvn-video/bkvn-video.styl';
 @import 'main/main.styl';
+@import 'subject/subject.styl';
 // endinjector
