client: Add route 'book'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -34,6 +34,7 @@
 @import 'bkvn-page/bkvn-page.styl';
 @import 'bkvn-subject/bkvn-subject.styl';
 @import 'bkvn-video/bkvn-video.styl';
+@import 'book/book.styl';
 @import 'main/main.styl';
 @import 'subject/subject.styl';
 // endinjector
