client: Add route 'chapter'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -35,6 +35,7 @@
 @import 'bkvn-subject/bkvn-subject.styl';
 @import 'bkvn-video/bkvn-video.styl';
 @import 'book/book.styl';
+@import 'chapter/chapter.styl';
 @import 'main/main.styl';
 @import 'subject/subject.styl';
 // endinjector
