client: Add route 'page'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -37,5 +37,6 @@
 @import 'book/book.styl';
 @import 'chapter/chapter.styl';
 @import 'main/main.styl';
+@import 'page/page.styl';
 @import 'subject/subject.styl';
 // endinjector
