client: Add route 'image'
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -36,6 +36,7 @@
 @import 'bkvn-video/bkvn-video.styl';
 @import 'book/book.styl';
 @import 'chapter/chapter.styl';
+@import 'image/image.styl';
 @import 'main/main.styl';
 @import 'page/page.styl';
 @import 'subject/subject.styl';
