--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -40,4 +40,5 @@
 @import 'main/main.styl';
 @import 'page/page.styl';
 @import 'subject/subject.styl';
+@import 'video/video.styl';
 // endinjector
