client: Add directive 'bkvn-status'
Via 'yo angular-fullstack:directive bkvn-status'

Updated to fix JSHint errors & restrict to 'E'.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -32,6 +32,7 @@
 @import 'bkvn-header/bkvn-header.styl';
 @import 'bkvn-image/bkvn-image.styl';
 @import 'bkvn-page/bkvn-page.styl';
+@import 'bkvn-status/bkvn-status.styl';
 @import 'bkvn-subject/bkvn-subject.styl';
 @import 'bkvn-video/bkvn-video.styl';
 @import 'book/book.styl';
