--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -1,1 +1,47 @@
+/*
+ * [BookVn] client/app/main/main.styl
+ *
+ * Styles for state 'main'.
+ *
+ * (c) 2017 Sanjeev Premi (spremi@ymail.com)
+ *
+ * SPDX-License-Identifier: BSD-3-Clause
+ *                          (http://spdx.org/licenses/BSD-3-Clause.html)
+ */
 
+
+.bkvn-logo
+  margin        64px 0px
+
+  font-size     5em
+  font-weight   600
+
+  text-align    center
+
+  .bkvn-logo-1
+    padding                     16px
+    border-top-left-radius      16px
+    border-bottom-left-radius   16px
+
+  .bkvn-logo-2
+    padding                     16px
+    border-top-right-radius     16px
+    border-bottom-right-radius  16px
+
+
+.bkvn-start
+  margin        96px 0px 0px 0px
+  text-align    center
+
+  span
+    padding       24px
+
+    font-size     3em
+    font-weight   600
+
+    text-align    center
+
+    border-radius 16px
+
+    &:hover
+      cursor      pointer
