--- a/client/app/bkvn-header/bkvn-header.styl
+++ b/client/app/bkvn-header/bkvn-header.styl
@@ -11,8 +11,13 @@
 
 
 bkvn-header
-  margin      0px 8px
-  align-self  center
+  display           flex
+  flex              1 0 auto
+  justify-content   space-between
+  align-items       center
+  user-select       none
+
+  margin            0px 16px
 
   .bkvn-logo-sm
     display       flex
@@ -31,3 +36,16 @@ bkvn-header
       padding                     4px
       border-top-right-radius     4px
       border-bottom-right-radius  4px
+
+  .bkvn-nav
+    display     flex
+
+    a
+      margin      0px 16px
+      padding     8px
+      font-size   1.2rem
+
+      transition  all 500ms ease-in-out
+
+      &:hover
+        transform translate(0px, -4px)
