client: app: Implement basic theme
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -104,6 +104,7 @@ a
 
 // Component styles are injected through grunt
 // injector
+@import 'app-colors.styl';
 @import 'bkvn-book/bkvn-book.styl';
 @import 'bkvn-chapter/bkvn-chapter.styl';
 @import 'bkvn-footer/bkvn-footer.styl';
