client: /main: Use colors
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app-colors.styl
+++ b/client/app/app-colors.styl
@@ -86,3 +86,23 @@ bkvn-footer
 
     &:hover
       color     #f8bbd0
+
+
+//
+// Application content (/main)
+//
+s-1-normal  = #37474f
+s-1-light   = #62727b
+s-1-dark    = #102027
+
+
+.bkvn-start
+  span
+    background-color  s-1-normal
+    color             s-1-light
+
+    transition        all 250ms linear
+
+    &:hover
+      background-color  s-1-dark
+      color             t-1-light
