client: /subject: Use colors
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app-colors.styl
+++ b/client/app/app-colors.styl
@@ -106,3 +106,23 @@ s-1-dark    = #102027
     &:hover
       background-color  s-1-dark
       color             t-1-light
+
+
+//
+// Application content (/subject)
+//
+s-2-normal  = #f06292
+s-2-light   = #ff94c2
+s-2-dark    = #ba2d65
+
+
+bkvn-subject
+  a
+    background-color    s-2-normal
+    color               t-1-light
+
+    transition    all 250ms linear
+
+    &:hover
+      background-color  s-2-light
+      color             t-1-dark !important
