--- a/client/app/bkvn-subject/bkvn-subject.styl
+++ b/client/app/bkvn-subject/bkvn-subject.styl
@@ -19,7 +19,9 @@ bkvn-subject
   width           150px
   height          150px
 
-  border          1px solid black
+  box-shadow      2px 2px 2px #484848
+  &:hover
+    box-shadow    4px 4px 4px #484848
 
   a
     flex              1
