client: /book: Use colors
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app-colors.styl
+++ b/client/app/app-colors.styl
@@ -126,3 +126,23 @@ bkvn-subject
     &:hover
       background-color  s-2-light
       color             t-1-dark !important
+
+
+//
+// Application content (/book)
+//
+s-3-normal  = #29b6f6
+s-3-light   = #73e8ff
+s-3-dark    = #0086c3
+
+
+bkvn-book
+  a
+    background-color  s-3-normal
+    color             t-1-light
+
+    transition    all 250ms linear
+
+    &:hover
+      background-color  s-3-light
+      color             t-1-dark !important
