client: /chapter: Use colors
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app-colors.styl
+++ b/client/app/app-colors.styl
@@ -146,3 +146,23 @@ bkvn-book
     &:hover
       background-color  s-3-light
       color             t-1-dark !important
+
+
+//
+// Application content (/chapter)
+//
+s-4-normal  = #ff8a65
+s-4-light   = #ffbb93
+s-4-dark    = #c75b39
+
+
+bkvn-chapter
+  a
+    background-color  s-4-normal
+    color             t-1-light
+
+    transition    all 250ms linear
+
+    &:hover
+      background-color  s-4-light
+      color             t-1-dark !important
