client: /page: Use colors
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app-colors.styl
+++ b/client/app/app-colors.styl
@@ -166,3 +166,22 @@ bkvn-chapter
     &:hover
       background-color  s-4-light
       color             t-1-dark !important
+
+
+//
+// Application content (/page)
+//
+s-5-normal  = #ffb74d
+s-5-light   = #ffe97d
+s-5-dark    = #c88719
+
+bkvn-page
+  a
+    background-color  s-5-normal
+    color             t-1-dark
+
+    transition    all 250ms linear
+
+    &:hover
+      background-color  s-5-light
+      color             t-1-dark !important
