client: /image: Use colors
Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/app/app-colors.styl
+++ b/client/app/app-colors.styl
@@ -185,3 +185,27 @@ bkvn-page
     &:hover
       background-color  s-5-light
       color             t-1-dark !important
+
+
+//
+// Application content (/image)
+//
+s-6-normal  = #a5d6a7
+s-6-light   = #d7ffd9
+s-6-dark    = #75a478
+
+
+bkvn-image
+  a
+    background-color  s-6-dark
+    color             t-1-light
+
+    &:hover
+      background-color  s-6-normal
+      color             t-1-dark !important
+
+
+.bkvn-prev-image
+.bkvn-next-image
+  background-color    s-1-normal
+  color               t-1-light
