client: app-header: Add placeholder for package version
This placeholder shall be replaced with actual
version while building the distribution package.

Signed-off-by: Sanjeev Premi <spremi@ymail.com>

--- a/client/templates/app-header.html
+++ b/client/templates/app-header.html
@@ -1,1 +1,2 @@
-<bkvn-header></bkvn-header>
+<div ng-if="vflag && version !==''" class="version">Version @@VERSION@@</div>
+<bkvn-header ng-if="!vflag"></bkvn-header>
