--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -63,6 +63,12 @@ a
   min-height        64px
   height            64px
 
+  .version
+    flex          1
+    margin        0px 16px
+    align-self    center
+    text-align    right
+
 
 //
 // Content area
